--- a/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
+++ b/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
@@ -46,8 +46,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageHeaderAttribute.cs" />
+    <Compile Include="MetaDataMessageSerializationStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
+    <Compile Include="ServiceRegisterExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
