--- a/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
+++ b/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
@@ -46,9 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageHeaderAttribute.cs" />
+    <Compile Include="MessagePropertyAttribute.cs" />
     <Compile Include="MetaDataMessageSerializationStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
+    <Compile Include="Property.cs" />
     <Compile Include="ServiceRegisterExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
