--- a/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
+++ b/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
@@ -45,6 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bindings\HeaderBinding.cs" />
+    <Compile Include="Bindings\TimestampPropertyBinding.cs" />
+    <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="IMetaDataBinding.cs" />
     <Compile Include="MessageHeaderAttribute.cs" />
     <Compile Include="MessagePropertyAttribute.cs" />
     <Compile Include="MetaDataMessageSerializationStrategy.cs" />
