Adds ability to bind the DeliveryMode message property to message POCO's

--- a/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
+++ b/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Bindings\ContentEncodingBinding.cs" />
     <Compile Include="Bindings\ContentTypeBinding.cs" />
+    <Compile Include="Bindings\DeliveryModeBinding.cs" />
     <Compile Include="Bindings\HeaderBinding.cs" />
     <Compile Include="Bindings\TimestampPropertyBinding.cs" />
     <Compile Include="DateTimeExtensions.cs" />
