--- a/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
+++ b/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Bindings\DeliveryModeBinding.cs" />
     <Compile Include="Bindings\ExpirationBinding.cs" />
     <Compile Include="Bindings\HeaderBinding.cs" />
+    <Compile Include="Bindings\MessageIdBinding.cs" />
     <Compile Include="Bindings\PriorityBinding.cs" />
     <Compile Include="Bindings\ReplyToBinding.cs" />
     <Compile Include="Bindings\TimestampPropertyBinding.cs" />
