Properly handles cases where bound message properties are missing or null/default

--- a/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
+++ b/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Bindings\MessageIdBinding.cs" />
     <Compile Include="Bindings\PriorityBinding.cs" />
     <Compile Include="Bindings\ReplyToBinding.cs" />
-    <Compile Include="Bindings\TimestampPropertyBinding.cs" />
+    <Compile Include="Bindings\TimestampBinding.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="IMetaDataBinding.cs" />
     <Compile Include="MessageHeaderAttribute.cs" />
