--- a/EasyNetQ.MetaData.Example.Message/EasyNetQ.MetaData.Example.Message.csproj
+++ b/EasyNetQ.MetaData.Example.Message/EasyNetQ.MetaData.Example.Message.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="ExampleEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleDateConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EasyNetQ.MetaData\EasyNetQ.MetaData.csproj">
