--- a/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
+++ b/EasyNetQ.MetaData/EasyNetQ.MetaData.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>Properties\AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Bindings\ContentEncodingBinding.cs" />
     <Compile Include="Bindings\ContentTypeBinding.cs" />
     <Compile Include="Bindings\CorrelationIdBinding.cs" />
@@ -60,18 +63,19 @@
     <Compile Include="Bindings\ReplyToBinding.cs" />
     <Compile Include="Bindings\TimestampBinding.cs" />
     <Compile Include="DateTimeExtensions.cs" />
-    <Compile Include="DeliveryMode.cs" />
     <Compile Include="IMetaDataBinding.cs" />
-    <Compile Include="MessageHeaderAttribute.cs" />
-    <Compile Include="MessagePropertyAttribute.cs" />
     <Compile Include="MetaDataMessageSerializationStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\AssemblyVersion.cs" />
-    <Compile Include="Property.cs" />
     <Compile Include="ServiceRegisterExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EasyNetQ.MetaData.Abstractions\EasyNetQ.MetaData.Abstractions.csproj">
+      <Project>{524533d8-62dd-4235-92d4-85d716a399bb}</Project>
+      <Name>EasyNetQ.MetaData.Abstractions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
