--- a/EasyNetQ.MetaData.Abstractions/EasyNetQ.MetaData.Abstractions.csproj
+++ b/EasyNetQ.MetaData.Abstractions/EasyNetQ.MetaData.Abstractions.csproj
@@ -1,62 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{524533D8-62DD-4235-92D4-85D716A399BB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EasyNetQ.MetaData.Abstractions</RootNamespace>
-    <AssemblyName>EasyNetQ.MetaData.Abstractions</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\EasyNetQ.MetaData.Abstractions.XML</DocumentationFile>
+
+  <PropertyGroup>
+    <IsPackage>true</IsPackage>
+    <Description>An extension to EasyNetQ that allows you to utilize message headers, without resorting to AdvancedBus!</Description>
+    <Authors>MattDavey</Authors>
+    <PackageTags>amqp;rabbitmq;easynetq;header;metadata</PackageTags>
+    <RepositoryUrl>https://github.com/Matthew-Davey/EasyNetQ.MetaData.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Copyright>© Matt Davey 2015-2018</Copyright>
+    <PackageProjectUrl>https://github.com/Matthew-Davey/EasyNetQ.MetaData</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/Matthew-Davey/EasyNetQ.MetaData/blob/develop/LICENSE</PackageLicenseUrl>
+    <PackageReleaseNotes>
+      * Upgrade project to netstandard2.0
+      * Upgrade to EasyNetQ 3.1.0
+    </PackageReleaseNotes>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\EasyNetQ.MetaData.Abstractions.XML</DocumentationFile>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard2.0\EasyNetQ.MetaData.Abstractions.xml</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\AssemblyVersion.cs">
-      <Link>Properties\AssemblyVersion.cs</Link>
-    </Compile>
-    <Compile Include="DeliveryMode.cs" />
-    <Compile Include="MessageHeaderAttribute.cs" />
-    <Compile Include="MessagePropertyAttribute.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Property.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\EasyNetQ.MetaData.Abstractions.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
