Switch to normal verbosity on travis builds to prevent reaching the log length limit

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ dotnet: 2.0.0
 install:
     - bundle install
 script:
-    - bundle exec rake build CONFIGURATION=Release
+    - bundle exec rake build CONFIGURATION=Release VERBOSITY=normal
